--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                21/08 
+                11/09 
               </a>
             </h3>
             <p>
@@ -60,7 +60,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE GUISADA </li>
+              <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> COSTELA ASSADA DE FORNO </li> -->
@@ -75,14 +75,14 @@
               <!-- <li> FILE DE FRANGO ASSADO </li> -->
               <!-- <li> FIGADO ACEBOLADO</li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO XADREZ </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> O </li> -->
               <!-- <li> ISCA DE FRANGO-->
               <!-- <li> ISCA DE FIGADO </li> -->
@@ -93,7 +93,7 @@
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
@@ -136,7 +136,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- TERÇA -->
-                22/08
+                12/09
               </a>
             </h3>
             <p>
@@ -147,13 +147,13 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> BOLINHO DE CHUVA </li>
+              <!-- <li> BOLINHO DE CHUVA </li> -->
               <!-- <li> BATATA DOCE </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <!-- <li> PATÊ </li> -->
+              <li> PATÊ </li>
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -171,8 +171,8 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
-              <li> BISTECA SUINÁ </li> 
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <!-- <li> BISTECA SUINÁ </li>  -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COZIDÃO MANAUARA </li> -->
@@ -185,7 +185,7 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
@@ -204,7 +204,7 @@
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PIRARUCU FRITO </li> -->
-              <!-- <li> PIRARUCU MILANESA </li> -->
+              <li> PIRARUCU MILANESA </li>
               <!-- <li> PICADINHO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -246,7 +246,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                23/08
+                13/09
 
               </a>
             </h3>
@@ -262,7 +262,7 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MACAXEIRA COZIDA </li> -->
-              <li> MINGAU DE AVEIA </li>
+              <!-- <li> MINGAU DE AVEIA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li>; -->
               <!-- <li> OVO FRITO </li> -->
@@ -270,7 +270,7 @@
               <!-- <li> PATÊ DE SARDINHA </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SALSICHA AO MOLHO </li> -->
@@ -283,13 +283,13 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ALMONDEGAS </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <!-- <li> DOBRADINHA </li> -->
+              <li> DOBRADINHA </li>
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -298,7 +298,7 @@
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
-              <!-- <li> FRANGO A DORE </li> -->
+              <li> FRANGO A DORE </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -316,7 +316,7 @@
               <!-- <li> MIX (OVO, CALABRESA E SALSICHA) </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <li> PANQUECAS DE FRANGO </li>
+              <!-- <li> PANQUECAS DE FRANGO </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A MILANESA </li> -->
@@ -333,7 +333,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> AÇAÍ </li>
+              <!-- <li> AÇAÍ </li> -->
               <!-- <li> AÇAÍ FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> ABACATADA COM BOLACHA </li> -->
@@ -355,6 +355,7 @@
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li> SALADA FRUTA </li> -->
+              <li> VITAMINADA COM BOLACHA </li>
             </ul>
             </p>
           </div>
@@ -367,7 +368,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                24/08
+                14/09
               </a>
             </h3>
             <p>
@@ -405,7 +406,7 @@
               <!-- <li> ALMONDEGAS AO MOLHO </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
@@ -417,7 +418,7 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
-              <!-- <li> FRANGO ASSADO DE FORNO</li> -->
+              <li> FRANGO ASSADO DE FORNO</li>
               <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -428,6 +429,7 @@
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
+              <li> LASANHA </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LASANHA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -435,7 +437,7 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE DE FORNO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <li> PEIXE FRITO </li>
+              <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
@@ -457,9 +459,9 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <!-- <li> KIKÃO </li> -->
+              <li> KIKÃO </li>
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
@@ -486,7 +488,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                25/08
+                15/09
 
               </a>
             </h3>
@@ -497,14 +499,14 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
-              <li> PANQUECA AMERICANA </li>
+              <!-- <li> PANQUECA AMERICANA </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -523,16 +525,16 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <!-- <li> CARNE ASSADA </li> -->
+              <li> CARNE ASSADA </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO PEIXE</li> -->
-              <li> COSTELA ASSADA </li>
+              <!-- <li> COSTELA ASSADA </li> -->
               <!-- <li> CHURRASCO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FEIJOADA </li>ç
+              <li> FEIJOADA </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -579,9 +581,9 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> SALADA DE FRUTA </li> -->
-              <li> X AMERICANO </li>
+              <!-- <li> X AMERICANO </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -595,7 +597,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                26/08
+                16/09
 
               </a>
             </h3>
@@ -630,7 +632,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -638,14 +640,14 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
-              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <li> FAROFA DE CONSERVA </li>
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -700,7 +702,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                27/08
+                17/09
 
               </a>
             </h3>
@@ -715,7 +717,7 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -724,7 +726,7 @@
               <!-- <li> SALSICHA COM MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
-              <!-- <li> TAPIOCA </li> -->
+              <li> TAPIOCA </li>
             </ul>
             </p></br>
             <p>
@@ -756,10 +758,10 @@
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <li> LINGUIÇA DE FRANGO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECA </li> -->
@@ -785,11 +787,11 @@
               <!-- <li> FAROFA DE OVO </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> PÃO COM OVO E QUEIJO </li>
+              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO E PRESUNTO</li> -->
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
-              <!-- <li> PIT STOP / IOGURTE </li> -->
+              <li> PIT STOP / IOGURTE </li>
               <!-- <li> SALGADO </li> -->
               <!-- <li> TAPIOCA E CAFE COM LEITE </li> -->
               <!-- <li> X SALADA </li> -->
