--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                09/10 
+                16/10 
               </a>
             </h3>
             <p>
@@ -67,7 +67,7 @@
               <!-- <li> COSTELA AO MOLHO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <li> ESTROGONOFE DE FRANGO </li>
+              <!-- <li> ESTROGONOFE DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FEIJOADA </li> -->
@@ -77,7 +77,7 @@
               <!-- <li> FIGADO ACEBOLADO</li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
-              <!-- <li> FRANGO DESFIADO </li> -->
+              <li> FRANGO DESFIADO </li>
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO XADREZ </li> -->
@@ -106,6 +106,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -115,7 +116,7 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> MINGAU DE MUNGUNZÁ </li>
+              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO </li> -->
@@ -125,7 +126,6 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
-              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
             </ul>
             </p>
           </div>
@@ -137,7 +137,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- TERÇA -->
-                10/10
+                17/10
               </a>
             </h3>
             <p>
@@ -150,9 +150,9 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> BOLINHO DE CHUVA </li> -->
               <!-- <li> BATATA DOCE </li> -->
-              <!-- <li> FRUTA </li> -->
+              <li> FRUTAS </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
@@ -180,7 +180,7 @@
               <!-- <li> COZIDÃO MANAUARA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <li> ESCONDIDINHO DE CARNE </li>
+              <!-- <li> ESCONDIDINHO DE CARNE </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
@@ -193,6 +193,7 @@
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
               <!-- <li> FRANGO GUISADO </li> -->
+              <li> HAMBÚRGUER </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -228,13 +229,14 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> PIT STOP </li> -->
               <!-- <li> SALGADO </li> -->
+              <li> TAPIOCA COM CAFÉ COM LEITE </li>
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -249,7 +251,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                11/10
+                18/10
 
               </a>
             </h3>
@@ -260,6 +262,7 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
+              <li> BATATA DOCE </li>
               <!-- <li> BOLO </li> -->
               <!-- <li> BOLINHO DE CHUVA </li> -->
               <!-- <li> FRUTA </li> -->
@@ -270,7 +273,7 @@
               <!-- <li> OVO COZIDO </li>; -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
-              <li> PATÊ DE SARDINHA </li>
+              <!-- <li> PATÊ DE SARDINHA </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -303,6 +306,7 @@
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO A DORE </li> -->
+              <li> FRANGO AO MOLHO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -317,12 +321,12 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA ASSADA DE FORNO </li> -->
-              <!-- <li> MACARRONADA DE CAMARÃO </li> -->
-              <li> MIX (OVO, CALABRESA E SALSICHA) </li>
+              <li> MACARRONADA DE CAMARÃO </li>
+              <!-- <li> MIX (OVO, CALABRESA E SALSICHA) </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PANQUECAS DE FRANGO </li> -->
-              <li> PEIXE FRITO </li>
+              <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -346,7 +350,7 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -355,6 +359,7 @@
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
+              <li> MINGAU </li>
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -374,7 +379,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                12/10
+                19/10
               </a>
             </h3>
             <p>
@@ -428,14 +433,14 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
-              <!-- <li> HAMBURGER </li> -->
+              <!-- <li> HAMBÚRGUER </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
@@ -446,11 +451,11 @@
               <!-- <li> OMELETE DE FORNO </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
+              <li> PEIXE FRITO </li>
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> YAKISOBA DE CARNE </li> -->
 
@@ -471,8 +476,8 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
-              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> KIKÃO </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MINGAU </li> -->
@@ -498,7 +503,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                13/10
+                20/10
 
               </a>
             </h3>
@@ -510,7 +515,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> FRUTA </li>
+              <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
@@ -519,7 +524,7 @@
               <!-- <li> PANQUECA AMERICANA </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -543,15 +548,17 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
+              <li> ESTROGONOFE DE CARNE </li>
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FEIJOADA </li>
+              <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
-              <li> FRANGO A MILANESA </li>
+              <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO CROCANTE </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -591,9 +598,9 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> SALADA DE FRUTA </li> -->
-              <li> X AMERICANO </li>
+              <!-- <li> X AMERICANO </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -607,7 +614,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                14/10
+                21/10
 
               </a>
             </h3>
@@ -652,9 +659,9 @@
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <li> ISCA DE CALABRESA </li>
@@ -686,12 +693,12 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <li> PÃO COM QUEIJO </li>
+              <!-- <li> PÃO COM QUEIJO </li> -->
               <!-- <li> PÃO COM OVO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -712,7 +719,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                15/10
+                22/10
 
               </a>
             </h3>
@@ -726,9 +733,9 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO </li>
+              <!-- <li> OVO </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -753,13 +760,14 @@
               <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO </li> -->
+              <li> COSTELA ASSADA DE FONO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
-              <li> FILE DE FRANGO </li>
+              <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -771,7 +779,7 @@
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> ISCA DE FIGADO </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -780,7 +788,7 @@
               <!-- <li> PANQUECA </li> -->
               <!-- <li> PANQUECA DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -794,13 +802,14 @@
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
-              <li> BOLACHA / IOGURTE </li>
+              <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FAROFA DE OVO </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM QUEIJO </li>
               <!-- <li> PÃO COM QUEIJO E PRESUNTO</li> -->
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
